k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-main
spec:
  selector:
    matchLabels:
      app: nginx-main
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-main
    spec:
      containers:
      - name: nginx-main
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-main-index
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-main-index
        configMap:
          name: nginx-main-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-main
spec:
  selector:
    app: nginx-main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
